# lora-skills

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  package.json  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
.github/: CODEOWNERS  pull_request_template.md
agents/: data-analyzer.md  memory-estimator.md  script-generator.md
cli/: __init__.py  main.py
cli/commands/: __init__.py  analyze.py  cook.py  evaluate.py  memory.py  recommend.py
commands/: analyze.md  check-data.md  cook.md  debug.md  setup.md
hooks/: hooks.json
scripts/: __init__.py  analyzer.py  evaluator.py  lora_advisor.py  memory_calc.py  script_builder.py
skillhub/: CLAUDE.md  README.md  package.json
skillhub/.claude-plugin/: plugin.json
skillhub/agents/: script-generator.md
skillhub/commands/: analyze.md
skillhub/examples/: sample_data.jsonl
skillhub/hooks/: run-hook.sh  session-start.sh
skillhub/skills/lora-trainer/: SKILL.md
skillhub/skills/lora-trainer/references/: model-catalog.md  recipes.md  vram-reference.md
skills/lora-trainer/: SKILL.md  TRIGGERS.md
skills/lora-trainer/references/: faq.md  model-catalog.md  recipes.md
skills/lora-trainer/scripts/: check_env.py  inference.py  train_qlora.py
templates/: eval_template.py  train_template.py
